United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7000349 Tiered reacts incorrectly to C1 compilation failures
7000349 : Tiered reacts incorrectly to C1 compilation failures

Details
Type:
Bug
Submit Date:
2010-11-16
Status:
Closed
Updated Date:
2011-04-23
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
Tiered has the following problems with C1 compile failures:

1. Compile broker marks method as non-compilatable at all levels if C1 compilation fails because C1 doesn't fill the failure_reason in ciEnv.
2. If a method cannot be compiled at any of the C1 levels the tiered policy tries to immediately compile it with C2 instead of continuing profiling in the interpreter.

Also, C1 needs to report the failure reason.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/22ef3370343b
                                     
2010-12-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/22ef3370343b
                                     
2010-11-17



Hardware and Software, Engineered to Work Together