7000349: Tiered reacts incorrectly to C1 compilation failures

Fix policy reaction to C1 comilation failures, make C1 properly report errors.

Reviewed-by: kvn